[tool.poetry]
name = "qiskit-qutrit-calibration"
description = "A qiskit experiments extension to calibrate single qutrit gates."
authors = ["Naoki Kanazawa", "Kaelyn Ferris"]
maintainers = ["Kaelyn Ferris"]
version = "0.1.4"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
qiskit-experiments = "^0.5.4"
qiskit-ibm-provider = "^0.8.0"
setuptools = "^69.0.3"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
stestr = "^4.1.0"
astroid = "^3.0.2"
pylint = "^3.0.3"
sphinx = "^6.2.1"
qiskit-sphinx-theme = "^1.16.0"
jupyter-sphinx = "^0.4.0"
pygments = "^2.17.2"
reno = "^4.0.0"
tox = "^4.11.4"
setuptools = "^69.0.3"
qiskit-aer = "^0.13.2"
pytest = "^7.4.4"
multimethod = "^1.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
